--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A Special Message For You...</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
-  <link href="assets/style.css" rel="stylesheet">
+  <link href="asset/style.css" rel="stylesheet">
 </head>
 <body>
   <main>
@@ -47,6 +47,6 @@
       <p id="contact-info" class="hidden"></p>
     </section>
   </main>
-  <script src="assets/script.js"></script>
+  <script src="asset/script.js"></script>
 </body>
 </html>
